nav bar align fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -121,8 +121,8 @@ h2 {
   box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
 }
 
-nav li {
-	display: inline-flex;
+.navbar-nav {
+	flex-direction: row;
 }
 
 /* Slick Overrides */
